StudentApp/bouhamdi.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec:
  selector:
    app: spring-boot-k8s
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: NodePort
